feat: pages, h1, hello world changes

--- a/data/posts/2022-01-01-hello-world.mdx
+++ b/data/posts/2022-01-01-hello-world.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2022-01-01T19:32:43.594Z"
 title: Hello World
-description: Hello world 2022 e desafio
+description: 2022, 2011 e desafio
 slug: hello-world
 tags:
   - personal
@@ -11,27 +11,22 @@ keywords:
 draft: false
 ---
 
-![](/images/content/hello-world/hello-world.jpg)
+![Hello World 2022](/images/content/hello-world/hello-world.jpg)
 
-Como um bom _dev_ que sou, este ano não poderia iniciar de forma diferente.
+Como um bom _dev_ que sou _(ou me tornei)_, este ano não poderia iniciar de forma diferente.
 
-O `hello world` carrega o peso de "primeiro programa", e é isso que essa postagem vai ser.
+O `hello world` carrega o peso de 'primeiro programa' e é isso que essa postagem vai ser, ao menos pra mim.
 
 ### 🎉 2022
 
-Como o primeiro projeto de 2022, esse blog foi criado. Através dele vou comentar um pouco mais sobre o meu dia-a-dia como desenvolvedor, explicando e documentando processos, ferramentas e tudo que utilizamos para resolver problemas e facilitar a nossa rotina diária.
+Como o primeiro projeto de 2022, esse blog foi criado.
 
-### 🔥 Desafio
+Através dele vou comentar um pouco mais sobre o meu dia-a-dia como desenvolvedor, explicando e documentando processos, ferramentas e técnicas que utilizamos para resolver problemas e facilitar a nossa rotina diária.
 
-O desafio será manter a constância e continuar postando e documentando processos aqui, visto que é uma pratica que na data de hoje (01/01/2022) não é muito comum em minha rotina.
+### 🔥 2021
 
-### 📝 Conclusão
+2021 pra mim foi um ano muito intenso, onde tive um grande crescimento pessoal e aprendi muito sobre o ecosistema **Javascript/React**.
 
-2021 foi um muito ano intenso e conturbado, porém **muito bom**, 2022 tem tudo para ser muito melhor, então:
+Anteriormente trabalhava no ramo de telecom e o desenvolvimento não era algo rotineiro para mim, apesar de criar ferramentas em PHP para ajudarem no dia-a-dia, porém não utilizava de soluções como **Git** e **CI/CD**, que hoje são essenciais. Em 2021 me dediquei em tempo integral e de fato comecei minha jornada como _dev_.
 
-- 💦 Beba água
-- 💪 Faça exercício
-
-e o mais importante...
-
-- 🧑‍💻 Desenvolva, desenvolva e desenvolva!
+O **desafio** agora é algo novo e que foge um pouco da minha rotina, que é fazer algo pra postar aqui.
